--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -115,13 +115,13 @@
 <svg xmlns="http://www.w3.org/2000/svg" class="hidden">
     <symbol id="icon-search" viewbox="0 0 18 19" fill="none">
         <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M11.03 11.68A5.784 5.784 0 112.85 3.5a5.784 5.784 0 018.18 8.18zm.26 1.12a6.78 6.78 0 11.72-.7l5.4 5.4a.5.5 0 11-.71.7l-5.41-5.4z" fill="currentColor" />
+              d="M11.03 11.68A5.784 5.784 0 112.85 3.5a5.784 5.784 0 018.18 8.18zm.26 1.12a6.78 6.78 0 11.72-.7l5.4 5.4a.5.5 0 11-.71.7l-5.41-5.4z" fill="currentColor"/>
     </symbol>
 
     <symbol id="icon-reset" class="icon icon-close" fill="none" viewBox="0 0 18 18" stroke="currentColor">
-        <circle r="8.5" cy="9" cx="9" stroke-opacity="0.2" />
-        <path d="M6.82972 6.82915L1.17193 1.17097" stroke-linecap="round" stroke-linejoin="round" transform="translate(5 5)" />
-        <path d="M1.22896 6.88502L6.77288 1.11523" stroke-linecap="round" stroke-linejoin="round" transform="translate(5 5)" />
+        <circle r="8.5" cy="9" cx="9" stroke-opacity="0.2"/>
+        <path d="M6.82972 6.82915L1.17193 1.17097" stroke-linecap="round" stroke-linejoin="round" transform="translate(5 5)"/>
+        <path d="M1.22896 6.88502L6.77288 1.11523" stroke-linecap="round" stroke-linejoin="round" transform="translate(5 5)"/>
     </symbol>
 
     <symbol id="icon-close" class="icon icon-close" fill="none" viewBox="0 0 18 17">
@@ -135,8 +135,7 @@
         if block.type == '@app'
             assign has_app_block = true
         endif
-    endfor
--%}
+    endfor -%}
 
 <{% if section.settings.sticky_header_type != 'none' %}sticky-header data-sticky-type="{{ section.settings.sticky_header_type }}" {% else %}div{% endif %}
         class="header-wrapper color-{{ section.settings.color_scheme }} gradient{% if section.settings.show_line_separator %} header-wrapper--border-bottom{% endif %}">
@@ -150,8 +149,7 @@
 
         if localization.available_countries.size > 1 and section.settings.enable_country_selector or section.settings.enable_language_selector and localization.available_languages.size > 1
             assign localization_forms = true
-        endif
-    -%}
+        endif -%}
     <header class="header header--{{ section.settings.logo_position }} header--mobile-{{ section.settings.mobile_logo_position }} page-width{% if section.settings.menu_type_desktop == 'drawer' %} drawer-menu{% endif %}{% if section.settings.menu != blank %} header--has-menu{% endif %}{% if has_app_block %} header--has-app{% endif %}{% if social_links %} header--has-social{% endif %}{% if shop.customer_accounts_enabled %} header--has-account{% endif %}{% if localization_forms %} header--has-localizations{% endif %}">
         {{ 'Wanna custom something here, wrote something: ' }} {{ routes.root_url }}
         {%- liquid
@@ -161,8 +159,7 @@
 
             if section.settings.logo_position == 'top-center' or section.settings.menu == blank
                 render 'header-search', input_id: 'Search-In-Modal-1'
-            endif
-        -%}
+            endif -%}
 
         {%- if section.settings.logo_position != 'middle-center' -%}
             {%- if request.page_type == 'index' -%}
@@ -182,8 +179,7 @@
                         width: settings.logo_width,
                         alt: logo_alt,
                         sizes: sizes,
-                        preload: true
-                        }}
+                        preload: true }}
                     </div>
                 {%- else -%}
                     <span class="h2">{{ shop.name }}</span>
@@ -201,8 +197,7 @@
                 elsif section.settings.menu_type_desktop != 'drawer'
                     render 'header-mega-menu'
                 endif
-            endif
-        %}
+            endif %}
 
         {%- if section.settings.logo_position == 'middle-center' -%}
             {%- if request.page_type == 'index' -%}
@@ -222,8 +217,7 @@
                         width: settings.logo_width,
                         alt: logo_alt,
                         sizes: sizes,
-                        preload: true
-                        }}
+                        preload: true }}
                     </div>
                 {%- else -%}
                     <span class="h2">{{ shop.name }}</span>
@@ -276,8 +270,7 @@
                     echo 'customer.account_fallback' | t
                 else
                     echo 'customer.log_in' | t
-                endif
-            -%}
+                endif -%}
           </span>
                 </a>
             {%- endif -%}
@@ -295,8 +288,7 @@
                         render 'icon-cart-empty'
                     else
                         render 'icon-cart'
-                    endif
-                -%}
+                    endif -%}
                 <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
                 {%- if cart != empty -%}
                     <div class="cart-count-bubble">
@@ -468,194 +460,194 @@
     {%- endif -%}
 
     {% schema %}
-	{
-		"name" : "t:sections.header.name",
-		"class" : "section-header",
-		"max_blocks" : 3,
-		"settings" : [
-			{
-				"type" : "select",
-				"id" : "logo_position",
-				"options" : [
-					{
-						"value" : "top-left",
-						"label" : "t:sections.header.settings.logo_position.options__2.label"
-					},
-					{
-						"value" : "top-center",
-						"label" : "t:sections.header.settings.logo_position.options__3.label"
-					},
-					{
-						"value" : "middle-left",
-						"label" : "t:sections.header.settings.logo_position.options__1.label"
-					},
-					{
-						"value" : "middle-center",
-						"label" : "t:sections.header.settings.logo_position.options__4.label"
-					}
-				],
-				"default" : "middle-left",
-				"label" : "t:sections.header.settings.logo_position.label",
-				"info" : "t:sections.header.settings.logo_help.content"
-			},
-			{
-				"type" : "link_list",
-				"id" : "menu",
-				"default" : "main-menu",
-				"label" : "t:sections.header.settings.menu.label"
-			},
-			{
-				"type" : "select",
-				"id" : "menu_type_desktop",
-				"options" : [
-					{
-						"value" : "dropdown",
-						"label" : "t:sections.header.settings.menu_type_desktop.options__1.label"
-					},
-					{
-						"value" : "mega",
-						"label" : "t:sections.header.settings.menu_type_desktop.options__2.label"
-					},
-					{
-						"value" : "drawer",
-						"label" : "t:sections.header.settings.menu_type_desktop.options__3.label"
-					}
-				],
-				"default" : "dropdown",
-				"label" : "t:sections.header.settings.menu_type_desktop.label",
-				"info" : "t:sections.header.settings.menu_type_desktop.info"
-			},
-			{
-				"type" : "select",
-				"id" : "sticky_header_type",
-				"options" : [
-					{
-						"value" : "none",
-						"label" : "t:sections.header.settings.sticky_header_type.options__1.label"
-					},
-					{
-						"value" : "on-scroll-up",
-						"label" : "t:sections.header.settings.sticky_header_type.options__2.label"
-					},
-					{
-						"value" : "always",
-						"label" : "t:sections.header.settings.sticky_header_type.options__3.label"
-					},
-					{
-						"value" : "reduce-logo-size",
-						"label" : "t:sections.header.settings.sticky_header_type.options__4.label"
-					}
-				],
-				"default" : "on-scroll-up",
-				"label" : "t:sections.header.settings.sticky_header_type.label"
-			},
-			{
-				"type" : "checkbox",
-				"id" : "show_line_separator",
-				"default" : true,
-				"label" : "t:sections.header.settings.show_line_separator.label"
-			},
-			{
-				"type" : "header",
-				"content" : "t:sections.header.settings.header__1.content"
-			},
-			{
-				"type" : "color_scheme",
-				"id" : "color_scheme",
-				"label" : "t:sections.all.colors.label",
-				"default" : "scheme-1"
-			},
-			{
-				"type" : "color_scheme",
-				"id" : "menu_color_scheme",
-				"label" : "t:sections.header.settings.menu_color_scheme.label",
-				"default" : "scheme-1"
-			},
-			{
-				"type" : "header",
-				"content" : "t:sections.header.settings.header__3.content",
-				"info" : "t:sections.header.settings.header__4.info"
-			},
-			{
-				"type" : "checkbox",
-				"id" : "enable_country_selector",
-				"default" : true,
-				"label" : "t:sections.header.settings.enable_country_selector.label"
-			},
-			{
-				"type" : "header",
-				"content" : "t:sections.header.settings.header__5.content",
-				"info" : "t:sections.header.settings.header__6.info"
-			},
-			{
-				"type" : "checkbox",
-				"id" : "enable_language_selector",
-				"default" : true,
-				"label" : "t:sections.header.settings.enable_language_selector.label"
-			},
-			{
-				"type" : "header",
-				"content" : "t:sections.header.settings.mobile_layout.content"
-			},
-			{
-				"type" : "select",
-				"id" : "mobile_logo_position",
-				"options" : [
-					{
-						"value" : "center",
-						"label" : "t:sections.header.settings.mobile_logo_position.options__1.label"
-					},
-					{
-						"value" : "left",
-						"label" : "t:sections.header.settings.mobile_logo_position.options__2.label"
-					}
-				],
-				"default" : "center",
-				"label" : "t:sections.header.settings.mobile_logo_position.label"
-			},
-			{
-				"type" : "header",
-				"content" : "t:sections.all.spacing"
-			},
-			{
-				"type" : "range",
-				"id" : "margin_bottom",
-				"min" : 0,
-				"max" : 100,
-				"step" : 4,
-				"unit" : "px",
-				"label" : "t:sections.header.settings.margin_bottom.label",
-				"default" : 0
-			},
-			{
-				"type" : "header",
-				"content" : "t:sections.all.padding.section_padding_heading"
-			},
-			{
-				"type" : "range",
-				"id" : "padding_top",
-				"min" : 0,
-				"max" : 36,
-				"step" : 4,
-				"unit" : "px",
-				"label" : "t:sections.all.padding.padding_top",
-				"default" : 20
-			},
-			{
-				"type" : "range",
-				"id" : "padding_bottom",
-				"min" : 0,
-				"max" : 36,
-				"step" : 4,
-				"unit" : "px",
-				"label" : "t:sections.all.padding.padding_bottom",
-				"default" : 20
-			}
-		],
-		"blocks" : [
-			{
-				"type" : "@app"
-			}
-		]
-	}
+    {
+        "name": "t:sections.header.name",
+        "class": "section-header",
+        "max_blocks": 3,
+        "settings": [
+            {
+                "type": "select",
+                "id": "logo_position",
+                "options": [
+                    {
+                        "value": "top-left",
+                        "label": "t:sections.header.settings.logo_position.options__2.label"
+                    },
+                    {
+                        "value": "top-center",
+                        "label": "t:sections.header.settings.logo_position.options__3.label"
+                    },
+                    {
+                        "value": "middle-left",
+                        "label": "t:sections.header.settings.logo_position.options__1.label"
+                    },
+                    {
+                        "value": "middle-center",
+                        "label": "t:sections.header.settings.logo_position.options__4.label"
+                    }
+                ],
+                "default": "middle-left",
+                "label": "t:sections.header.settings.logo_position.label",
+                "info": "t:sections.header.settings.logo_help.content"
+            },
+            {
+                "type": "link_list",
+                "id": "menu",
+                "default": "main-menu",
+                "label": "t:sections.header.settings.menu.label"
+            },
+            {
+                "type": "select",
+                "id": "menu_type_desktop",
+                "options": [
+                    {
+                        "value": "dropdown",
+                        "label": "t:sections.header.settings.menu_type_desktop.options__1.label"
+                    },
+                    {
+                        "value": "mega",
+                        "label": "t:sections.header.settings.menu_type_desktop.options__2.label"
+                    },
+                    {
+                        "value": "drawer",
+                        "label": "t:sections.header.settings.menu_type_desktop.options__3.label"
+                    }
+                ],
+                "default": "dropdown",
+                "label": "t:sections.header.settings.menu_type_desktop.label",
+                "info": "t:sections.header.settings.menu_type_desktop.info"
+            },
+            {
+                "type": "select",
+                "id": "sticky_header_type",
+                "options": [
+                    {
+                        "value": "none",
+                        "label": "t:sections.header.settings.sticky_header_type.options__1.label"
+                    },
+                    {
+                        "value": "on-scroll-up",
+                        "label": "t:sections.header.settings.sticky_header_type.options__2.label"
+                    },
+                    {
+                        "value": "always",
+                        "label": "t:sections.header.settings.sticky_header_type.options__3.label"
+                    },
+                    {
+                        "value": "reduce-logo-size",
+                        "label": "t:sections.header.settings.sticky_header_type.options__4.label"
+                    }
+                ],
+                "default": "on-scroll-up",
+                "label": "t:sections.header.settings.sticky_header_type.label"
+            },
+            {
+                "type": "checkbox",
+                "id": "show_line_separator",
+                "default": true,
+                "label": "t:sections.header.settings.show_line_separator.label"
+            },
+            {
+                "type": "header",
+                "content": "t:sections.header.settings.header__1.content"
+            },
+            {
+                "type": "color_scheme",
+                "id": "color_scheme",
+                "label": "t:sections.all.colors.label",
+                "default": "scheme-1"
+            },
+            {
+                "type": "color_scheme",
+                "id": "menu_color_scheme",
+                "label": "t:sections.header.settings.menu_color_scheme.label",
+                "default": "scheme-1"
+            },
+            {
+                "type": "header",
+                "content": "t:sections.header.settings.header__3.content",
+                "info": "t:sections.header.settings.header__4.info"
+            },
+            {
+                "type": "checkbox",
+                "id": "enable_country_selector",
+                "default": true,
+                "label": "t:sections.header.settings.enable_country_selector.label"
+            },
+            {
+                "type": "header",
+                "content": "t:sections.header.settings.header__5.content",
+                "info": "t:sections.header.settings.header__6.info"
+            },
+            {
+                "type": "checkbox",
+                "id": "enable_language_selector",
+                "default": true,
+                "label": "t:sections.header.settings.enable_language_selector.label"
+            },
+            {
+                "type": "header",
+                "content": "t:sections.header.settings.mobile_layout.content"
+            },
+            {
+                "type": "select",
+                "id": "mobile_logo_position",
+                "options": [
+                    {
+                        "value": "center",
+                        "label": "t:sections.header.settings.mobile_logo_position.options__1.label"
+                    },
+                    {
+                        "value": "left",
+                        "label": "t:sections.header.settings.mobile_logo_position.options__2.label"
+                    }
+                ],
+                "default": "center",
+                "label": "t:sections.header.settings.mobile_logo_position.label"
+            },
+            {
+                "type": "header",
+                "content": "t:sections.all.spacing"
+            },
+            {
+                "type": "range",
+                "id": "margin_bottom",
+                "min": 0,
+                "max": 100,
+                "step": 4,
+                "unit": "px",
+                "label": "t:sections.header.settings.margin_bottom.label",
+                "default": 0
+            },
+            {
+                "type": "header",
+                "content": "t:sections.all.padding.section_padding_heading"
+            },
+            {
+                "type": "range",
+                "id": "padding_top",
+                "min": 0,
+                "max": 36,
+                "step": 4,
+                "unit": "px",
+                "label": "t:sections.all.padding.padding_top",
+                "default": 20
+            },
+            {
+                "type": "range",
+                "id": "padding_bottom",
+                "min": 0,
+                "max": 36,
+                "step": 4,
+                "unit": "px",
+                "label": "t:sections.all.padding.padding_bottom",
+                "default": 20
+            }
+        ],
+        "blocks": [
+            {
+                "type": "@app"
+            }
+        ]
+    }
     {% endschema %}
