--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -460,6 +460,7 @@
                   section_id: section.id,
                   show_pickup_availability: true
                 -%}
+                {{ 'something' }}
               {%- when 'rating' -%}
                 {%- if product.metafields.reviews.rating.value != blank -%}
                   <div class="rating-wrapper">
