--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -283,6 +283,14 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
+
+    {% comment %}custom style files{% endcomment %}
+    <link
+      rel="stylesheet"
+      href="{{ 'extend-prod-widget.css' | asset_url }}"
+      media="print"
+      onload="this.media='all'"
+    >
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
