--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -452,7 +452,7 @@
 
                             {%- when 'variant_picker' -%}
                                 {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
-                            
+
                             {%- when 'buy_buttons' -%}
                                 {%- render 'buy-buttons',
                                         block: block,
@@ -462,6 +462,8 @@
                                         show_pickup_availability: true
                                 -%}
 
+                            {% include 'extend-prod-widget' %}
+                            
                             {%- when 'rating' -%}
                                 {%- if product.metafields.reviews.rating.value != blank -%}
                                     <div class="rating-wrapper">
