--- a/snippets/extend-prod-widget.liquid
+++ b/snippets/extend-prod-widget.liquid
@@ -15,15 +15,19 @@
             </label>
             <div class="shipping-render">
                 <ul class="shipping-chain">
-                    <li class="chain-node"><img id="cart-process"
-                                                src=""
-                                                alt="SVG Image"></li>
+                    <li class="chain-node">
+                        <p class="process-title">Order Date</p>
+                        <img id="cart-process" src="" alt="error">
+                        <p class="process-date">20/08</p>
+                    </li>
                     <li class="chain-line">
                         <hr>
                     </li>
-                    <li class="chain-node"><img id="shipping-process"
-                                                src=""
-                                                alt="SVG Image"></li>
+                    <li class="chain-node">
+                        <p class="process-title">Delivery Date</p>
+                        <img id="shipping-process" src="" alt="error">
+                        <p class="process-date">22/08-24/08</p>
+                    </li>
                 </ul>
             </div>
         </div>
