--- a/assets/extend-prod-widget.css
+++ b/assets/extend-prod-widget.css
@@ -79,6 +79,8 @@
 
 .shipping-render {
     margin: 20px 0;
+    font-family: Arial, serif;
+    overflow: hidden;
 }
 
 .shipping-render .shipping-chain {
@@ -99,9 +101,9 @@
 
 .shipping-render .shipping-chain .chain-node .process-title, .chain-node .process-date {
     display: block;
-    width: 85px;
-    height: 10px;
-    color: #025BBF;
+    width: 100px;
+    height: 15px;
+    color: #025bbf;
     font-weight: 600;
     font-size: 13px;
     text-align: center;
@@ -110,7 +112,7 @@
 .shipping-render .shipping-chain .chain-node img {
     color: white;
     width: 42px;
-    height: 38px;
+    height: 42px;
     padding: 8px;
     border-radius: 50%;
     background-color: #025BBF;
@@ -125,10 +127,10 @@
 
 .shipping-render .shipping-chain .chain-line hr {
     z-index: -1;
-    width: calc(100% + 44px);
-    top: -12%;
-    left: -22px;
-    height: 1px;
+    width: calc(100% + 64px);
+    top: -8%;
+    left: -32px;
+    height: 2px;
     background-color: #025bbf;
     position: absolute;
 }
