--- a/snippets/extend-prod-widget.liquid
+++ b/snippets/extend-prod-widget.liquid
@@ -31,7 +31,7 @@
                 </ul>
             </div>
         </div>
-        <div class="tab-section-content" id="content-tab2">
+        <div class="tab-section-content hidden" id="content-tab2">
             <label>
                 <select name="quantity">
                     <option>Buy 1 item</option>
