--- a/snippets/extend-prod-widget.liquid
+++ b/snippets/extend-prod-widget.liquid
@@ -18,7 +18,7 @@
                     <li class="chain-node">
                         <p class="process-title">Order Date</p>
                         <img id="cart-process" src="" alt="error">
-                        <p class="process-date">20/08</p>
+                        <p class="process-date" id="ordered-day">20/08</p>
                     </li>
                     <li class="chain-line">
                         <hr>
@@ -26,7 +26,7 @@
                     <li class="chain-node">
                         <p class="process-title">Delivery Date</p>
                         <img id="shipping-process" src="" alt="error">
-                        <p class="process-date">22/08-24/08</p>
+                        <p class="process-date" id="estimate-day">22/08-24/08</p>
                     </li>
                 </ul>
             </div>
@@ -98,6 +98,20 @@
         });
     }
 
+    function calcDateDelivery(){
+        let currentDate = new Date();
+
+        document.getElementById('ordered-day').
+        currentDate.setDate(currentDate.getDate() + 3);
+        let day = currentDate.getDate();
+        let month = currentDate.getMonth() + 1;
+        let year = currentDate.getFullYear();
+        day = day < 10 ? '0' + day : day;
+        month = month < 10 ? '0' + month : month;
+        let formattedDate = day + '/' + month + '/' + year;
+        console.log("Delivery Date: ", formattedDate);
+    }
+    calcDateDelivery();
     document.addEventListener("DOMContentLoaded", function () {
         setTabActive('tab1', 'content-tab1');
         hookEventTabPanel('tab1', 'content-tab1');
