--- a/snippets/extend-prod-widget.liquid
+++ b/snippets/extend-prod-widget.liquid
@@ -140,7 +140,7 @@
 
     function calcDiscountTotalPrice() {
         let productPrice = 10000;
-        console.lo('getProductVariant: ', getProductVariant);
+        console.log('getProductVariant: ', getProductVariant);
         const selectElement = document.getElementById('sel-discount-quantity');
         const selectedValue = selectElement.value;
         document.getElementById('sw-discount-quantity').innerText = selectElement.options[selectElement.selectedIndex].textContent;
