--- a/snippets/extend-prod-widget.liquid
+++ b/snippets/extend-prod-widget.liquid
@@ -141,6 +141,7 @@
     function calcDiscountTotalPrice() {
         let productPrice = 10000;
         console.log('getProductVariant: ' + getProductVariant());
+        console.log('Variant: ',meta.product.variants);
         const selectElement = document.getElementById('sel-discount-quantity');
         const selectedValue = selectElement.value;
         document.getElementById('sw-discount-quantity').innerText = selectElement.options[selectElement.selectedIndex].textContent;
