--- a/snippets/extend-prod-widget.liquid
+++ b/snippets/extend-prod-widget.liquid
@@ -139,9 +139,13 @@
     }
 
     function calcDiscountTotalPrice() {
-        let productPrice = 10000;
-        console.log('getProductVariant: ' + getProductVariant());
-        console.log('Variant: ',meta.product.variants);
+        const prodVariant = getProductVariant();
+        for (const el of meta.product.variants) {
+            if(prodVariant=== el.id){
+               let productPrice = el.price;
+               break;
+            }
+        }
         const selectElement = document.getElementById('sel-discount-quantity');
         const selectedValue = selectElement.value;
         document.getElementById('sw-discount-quantity').innerText = selectElement.options[selectElement.selectedIndex].textContent;
