--- a/snippets/extend-prod-widget.liquid
+++ b/snippets/extend-prod-widget.liquid
@@ -138,7 +138,7 @@
         return day + '/' + month;
     }
 
-    const callbackCalcDiscount = function calcDiscountTotalPrice() {
+    function calcDiscountTotalPrice() {
         let productPrice = 0; const prodVariant = getProductVariant();
         console.log('list variants:', meta.product.variants);
         for (const el of meta.product.variants) {
@@ -166,18 +166,15 @@
         return urlParams.get('variant').toString().trim();
     }
 
-    const observer = new MutationObserver(callbackCalcDiscount);
-
-
     document.addEventListener("DOMContentLoaded", function () {
         calcDateDelivery();
         calcDiscountTotalPrice();
         setTabActive('tab1', 'content-tab1');
         hookEventTabPanel('tab1', 'content-tab1');
         hookEventTabPanel('tab2', 'content-tab2');
-        
-        const config = { attributes: true, childList: true, subtree: true };
-        observer.observe(document.getElementsByTagName('product-info').item(0), config);
+
+        const observer = new MutationObserver(calcDiscountTotalPrice);
+        observer.observe(document.getElementsByTagName('product-info').item(0), { attributes: true, childList: true, subtree: true });
     });
 
 </script>
