--- a/snippets/extend-prod-widget.liquid
+++ b/snippets/extend-prod-widget.liquid
@@ -175,6 +175,7 @@
 
         const observer = new MutationObserver(calcDiscountTotalPrice);
         observer.observe(document.getElementsByTagName('variant-selects').item(0), { attributes: true, childList: true, subtree: true });
+        console.log('Element: ', document.getElementsByTagName('variant-selects').item(0));
     });
 
 </script>
